force-app/main/default/objects/QATest_Script__c/QATest_Script__c.object-meta.xml
<CustomObject>
    <label>QATest Script</label>
    <nameField>
        <label>QATest Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QATest Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>