force-app/main/default/objects/QATest_Script__c/fields/Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>