force-app/main/default/objects/QATest_Script__c/fields/Expected_Results__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results__c</fullName>
    <label>Expected Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>