force-app/main/default/objects/QATest_Script__c/fields/Last_Run_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Verdict__c</fullName>
    <label>Last Run Verdict</label>
    <length>20</length>
    <type>Text</type>
</CustomField>