force-app/main/default/objects/QATest_Script__c/fields/Needs_to_be_Updated__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs to be Updated</label>
    <type>Checkbox</type>
</CustomField>