force-app/main/default/objects/QATest_Script__c/fields/POST_CONDITIONS__c.field-meta.xml
<CustomField>
    <fullName>POST_CONDITIONS__c</fullName>
    <label>POST CONDITIONS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>