force-app/main/default/objects/QATest_Script__c/fields/PRE_CONDITIONS__c.field-meta.xml
<CustomField>
    <fullName>PRE_CONDITIONS__c</fullName>
    <label>PRE CONDITIONS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>