force-app/main/default/objects/QATest_Script__c/fields/Related_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User Story</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>QATest Scripts</relationshipLabel>
    <relationshipName>QATest_Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>