force-app/main/default/objects/QATest_Script__c/fields/Test_Script_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Description__c</fullName>
    <label>Test Script Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>