force-app/main/default/objects/QATest_Script__c/fields/Test_Script_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Type__c</fullName>
    <label>Test Script Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>