force-app/main/default/objects/QATest_Script__c/fields/TEST_STEPS__c.field-meta.xml
<CustomField>
    <fullName>TEST_STEPS__c</fullName>
    <label>TEST STEPS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>